[package]
name = "ntl-tentacle"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
tokio-util = { version = "0.7", features = ["full"] }
tentacle-metrics = { git = "https://github.com/nautilusUDS/tentacle-metrics.git", tag = "v1.0.0" }
prost = "0.13.5"
crc = "3.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

